@@ -8,14 +8,29 @@ dependencies {
     implementation(project(":satviz-network"))
     implementation(project(":satviz-serial"))
     implementation(project(":satviz-sat"))
+    implementation(project(":satviz-common"))
     implementation("com.fasterxml.jackson.core:jackson-databind:2.13.1")
     implementation("net.sourceforge.argparse4j:argparse4j:0.9.0")
+    implementation("net.lingala.zip4j:zip4j:2.9.1")
     implementation(project(":satviz-parsers"))
 }
 
 javafx {
     modules("javafx.controls", "javafx.fxml")
     version = "17"
+}
+
+jlink {
+    imageName.set("satviz")
+    launcher {
+        name = "satviz"
+        jvmArgs = listOf("--enable-native-access=edu.kit.satviz.consumer")
+    }
+}
+
+application {
+    mainModule.set("edu.kit.satviz.consumer")
+    mainClass.set("edu.kit.satviz.consumer.ConsumerApplication")
 }
 
 val nativeBuildDir = project.buildDir.resolve("cmake-build")
@@ -51,11 +66,24 @@ tasks {
         commandLine = listOf("make", "-j", "6")
     }
 
+    register<Copy>("installTestBuild") {
+        val dir = rootProject.projectDir.resolve("test-run/satviz")
+        doFirst {
+            dir.deleteRecursively()
+        }
+        dependsOn.add("jlink")
+        from(buildDir.resolve("satviz"))
+        into(dir)
+    }
+
     processResources {
+        val producerBuild = project(":satviz-producer").tasks.getByName("jlinkZip")
+        dependsOn.add(producerBuild)
         dependsOn.add("make")
         from(consumerLib)
         from(ogdfLib)
         from(coinLib)
+        from(producerBuild.outputs.files.singleFile)
     }
 
     test {
